FEAT: Add superset queries

--- a/dbeaver_conf/initial-data-sources.conf
+++ b/dbeaver_conf/initial-data-sources.conf
@@ -1,7 +1,8 @@
 {
     "folders": {
             "TrinoFolder": {},
-	    "Postgres": {}
+	    "Postgres": {},
+	    "SupersetDB": {}
     },
     "connections": {
             "trino_jdbc-1931befd307-52152b797496dda1": {
@@ -40,6 +41,25 @@
                                 "autocommit": true
                         }
                 }
-        }
+        },
+        "postgres-jdbc-1947edf497a-4155cc41d2450207": {
+                        "provider": "postgresql",
+                        "driver": "postgres-jdbc",
+                        "name": "Superset",
+                        "folder": "SupersetDB",
+                        "configuration": {
+                                "host": "postgres",
+                                "port": "5432",
+                                "database": "superset",
+                                "url": "jdbc:postgresql://postgres:5432/superset",
+                                "configurationType": "MANUAL",
+                                "type": "dev",
+                                "closeIdleConnection": true,
+                                "auth-model": "native",
+                                "bootstrap": {
+                                        "autocommit": true
+                                }
+                        }
+                }
     }
 }
